Fix broken Writer tests